# Kernel-Sim

./: .gitignore  CMakeLists.txt  README.md
Kernel-Sim/: CMakeLists.txt
Kernel-Sim/cli/: main.cpp
Kernel-Sim/docs/: Informe_Tecnico.md
Kernel-Sim/modules/cpu/: pcb.h
Kernel-Sim/modules/disk/: disk.cpp
Kernel-Sim/modules/heap/: buddy.cpp
Kernel-Sim/modules/io/: device.cpp
Kernel-Sim/modules/sync/: philosophers.h  semaphore.h
Kernel-Sim/scripts/tools/: plot_disk.py
cli/: main.cpp
docs/: README.md  estructura_proyecto.md  planificador.md  sincronizacion.md  sync_module.md
modules/common/: common.hpp
modules/cpu/: cpu.cpp  cpu.h  pcb.cpp  pcb.h  process.cpp  process.hpp  scheduler.cpp  scheduler.h  scheduler.hpp
modules/disk/: disk.cpp  disk.h  scheduling.cpp  scheduling.hpp
modules/disk/disk_sched/: disk_sched.cpp  disk_sched.h
modules/heap/: buddy.h
modules/io/: device.h  device_queue.cpp  device_queue.hpp  io.cpp  io.h  printer.cpp  printer.hpp
modules/mem/: allocation.cpp  allocation.hpp  heap.cpp  heap.hpp  mem.cpp  mem.h  paging.cpp  paging.h  paging.hpp
modules/sync/: bounded_buffer.h  pc_cli.cpp  pc_cli.h  philosophers.cpp  philosophers.hpp  producer_consumer.cpp  producer_consumer.hpp  semaphore.h
scripts/: README-scripts.md  disk_demo.txt  disk_fcfs_sstf.txt  fallos_vs_marcos.py  full_demo.txt  mem_demo.txt  mem_fifo_lru_pff.txt  proc_demo.txt  proc_sjf_vs_rr.txt  test_cpu.cpp  test_mem.cpp
scripts/cpu/: A_rr_q3.txt  B_rr_q5.txt  C_sjf.txt  rr_sjf.txt
scripts/disk/: A_fcfs_A.txt  B_sstf_A.txt  C_scan_A.txt  fcfs_sstf_scan.txt
scripts/mem/: A_fifo.txt  B_lru.txt  C_ws_tau.txt  mem_traza_demo.txt
scripts/tools/: plot_memory.py
tests/: test_cpu.cpp
